# navbar_i3

./: .gitignore  CMakeLists.txt  README.md  Sytlish.qml  main.qml  qml.qrc  qmldir
include/: RunFromTerminal.h
src/: RunFromTerminal.cpp  main.cpp
